<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bdi_skills</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="devisdalmoro@gmail.com">devis</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>plansys2_executor</depend>
  <depend>ros2_bdi_interfaces</depend>
  <depend>ros2_bdi_utils</depend>
  <depend>ros2_bdi_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
