<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bdi_tests</name>
  <version>0.0.0</version>
  <description>ROS2 BDI fun with tests!</description>
  <maintainer email="devis.dalmoro@studenti.unitn.it">devis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>ros2_bdi_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
